# AGF-Lichtsoftware

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/dmx/: artnet.rs  enttec.rs  mod.rs  output.rs  universe.rs
src-tauri/src/engine/: mod.rs
src-tauri/src/ipc/: commands.rs  mod.rs
src/app/: App.tsx
src/app/modes/design/: DesignMode.tsx  DeviceInspector.tsx  PresetPalette.tsx  StageVisualizer.tsx
src/app/modes/live/: CueGrid.tsx  LiveMode.tsx  TapTempo.tsx
src/app/modes/setup/: FixtureLibrary.tsx  SetupMode.tsx  UniverseGrid.tsx
src/app/shell/: OutputsDrawer.tsx  StatusBar.tsx  TitleBar.tsx
src/components/: Fader.tsx
src/ipc/: api.ts
src/lib/: nanoid.ts
src/stores/: cueStore.ts  engineStore.ts  patchStore.ts  uiStore.ts
src/styles/: globals.css
