[package]
name = "agf-light"
version = "0.1.0"
description = "AGF Light – modern professional DMX lighting control"
authors = ["AGF Studios"]
license = "Proprietary"
edition = "2021"
rust-version = "1.78"

[lib]
name = "agf_light_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-dialog = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
# DMX / network
socket2 = "0.5"
# Enttec Open DMX & DMX USB Pro
serialport = "4.6"
# Smooth float math
glam = { version = "0.29", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
